MINOR FEATURES

* Dependency on `gpclib` removed, and `fortify.SpatialPolygonsDataFrame` will
  now use `rgeos` if available - this is particularly useful if you're not
  able to use the non-free `gpclib`.

* `ggsave` now supports emf output files.

* all "template" plots (`plotmatrix`, `ggorder` etc) have been deprecated and
  will be removed in a future version. These plots are poorly tested and
  poorly supported and really belong in a separate package.

* The default guide for continuous color/fill scale is now colourbar.
  (Kohske Takahashi. Fixes #555)

DOCUMENTATION

* All geoms and stats now document their aesthetics. (Fixes #447)

BUG FIXES

* Setting breaks outside the limits of the x or y axis no longer causes
  errors. (Kohske Takahashi. Fixes #552)

* `facet_locate` no longer evaluates unneeded expressions. (Winston
  Chang. Fixes #565)

* `annotation_map` now gets group id from munched data. (Winston Chang.
  Fixes #568)

ggplot2 0.9.1
----------------------------------------------------------------

MINOR FEATURES

* `ggstructure` and `ggorder`, which call `ggpcp`, no longer have a 
  `scale` argument since `ggpcp` does not have one.

* built in datasets have been checked to make sure they use characters,
  factors and ordered factors appropriately

* `geom_raster` and `annotation_raster` gain new `interpolate` argument for
  controlling whether or not rasters are interpolated

* Added `plot` as an alias for `print` for ggplot objects.

* Visual tests have been moved to /visual_test and modified to work with the
  vtest package. (Thanks to Winston Chang)

* `geom_dotplot`: now supports stacking. It uses `stackgroups = TRUE` instead
  of the usual position="stack", for technical reasons. It also will stack in
  the x direction when binning along the y axis. (Thanks to Winston Chang)

* `geom_rug` now allows control over which sides to put the rug lines, with
  the `sides` argument. (Thanks to Winston Chang)
