@@ -1,5 +1,7 @@
 MINOR FEATURES
 
+* `stat_contour` is now somewhat faster
+
 * Dependency on `gpclib` removed, and `fortify.SpatialPolygonsDataFrame` will
   now use `rgeos` if available - this is particularly useful if you're not
   able to use the non-free `gpclib`.
